Indice sin estilos - terminado
Se deja pendiente la inclusión y aplicación de estilos a la correspondiente landing page

--- a/prueba1/index.html
+++ b/prueba1/index.html
@@ -2,20 +2,73 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Pagina 1</title>
+
+
+
+        <title> Index </title>
     </head>
     <body>
 
         <header>
 
+                <h1> Valle de Aburrá </h1>
+
+            <nav>
+                <hr> <br> <h3> Puntos de interés geográfico </h3> 
+
+                <a href="pagina1.html"> <button> Municipio de Caldas </button> </a> <a href="pagina2.html"> <button> Alto de Minas </button> </a>
+                <br> <br>
+                <hr>
+            </nav>
+
+
         </header>
         <main>
+
+
+                <br>
+                <img src="IMG/mapvalleaburra.png" alt="Mapa del valle de aburrá">
+                <br>
+                <hr>
+
+            <h2> ¿Dónde queda? </h2>
+
             <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Modi dolorum natus aliquam debitis, accusamus ut, aliquid voluptas sit dignissimos quos perferendis quidem nesciunt esse excepturi, praesentium amet! Quam, quisquam dolorem!
+                El Valle de Aburrá es una subregión-provincia ubicada 
+                en el centro-sur del departamento de Antioquia, 
+                Colombia, en medio de la Cordillera Central de los Andes. 
+                Forma parte de la cuenca natural del río Medellín
+
             </p>
+
+            <br> <br> <br> <br> <hr>
+
+
         </main>
+
+        <footer>
+            <h3>
+                Información del creador
+            </h3>
+            <p>
+                Mi nombre es Santiago Vélez, vivo en el municipio de Caldas y 
+                me apasiona mucho el desarrollo web. 
+                Soy estudiante de CESDE y actualmente tengo 17 años
+            </p>
+            <br>
+            <p>
+                Todos los derechos reservados © 2021
+                <br>
+                Caldas Antioquia - Mes de Marzo
+            </p>
+
+
+
+        </footer>
         
     </body>
 </html>
