Estilo inicial index.html
Se le enlaza una hoja de estilos al archivo index para proceder a darle al fondo un color más amigable con la vista y se ajustaron los colores de otros elementos para que combinaran bien con el fondo

--- a/prueba1/index.html
+++ b/prueba1/index.html
@@ -7,9 +7,9 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+        <link rel="stylesheet" href="CSS/estilo_index.css" type="text/css" media="all">
 
-
-        <title> Index </title>
+        <title> Blog sobre el Valle de Aburrá </title>
     </head>
     <body>
 
@@ -38,7 +38,7 @@
             <h2> ¿Dónde queda? </h2>
 
             <p>
-                El Valle de Aburrá es una subregión-provincia ubicada 
+                El Valle de Aburrá es una subregión ubicada 
                 en el centro-sur del departamento de Antioquia, 
                 Colombia, en medio de la Cordillera Central de los Andes. 
                 Forma parte de la cuenca natural del río Medellín
