Formulario de registro - clases

--- a/prueba1/index.html
+++ b/prueba1/index.html
@@ -19,8 +19,14 @@
 
             <nav>
                 <hr> <br> <h3> Puntos de interés geográfico </h3> 
-
-                <a href="pagina1.html"> <button> Municipio de Caldas </button> </a> <a href="pagina2.html"> <button> Alto de Minas </button> </a>
+                <!-- EN EL NAV SIEMPRE VA UNA LISTA -->
+                <ul>
+                <li> <a href="pagina1.html"> <button> Municipio de Caldas </button> </a> </li>
+                <br>
+                <li> <a href="pagina2.html"> <button> Alto de Minas </button> </a> </li>
+                <br>
+                <li> <a href="pagina2.html"> <button> Alto de Minas </button> </a> </li>
+                </ul>
                 <br> <br>
                 <hr>
             </nav>
@@ -61,7 +67,7 @@
             </p>
             <br>
             <p>
-                Todos los derechos reservados © 2021
+                Todos los derechos reservados &#169; 2021 
                 <br>
                 Caldas Antioquia - Mes de Marzo
             </p>
