--- a/prueba1/pagina2.html
+++ b/prueba1/pagina2.html
@@ -7,14 +7,14 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Caldas Antioquia</title>
+    <title>Alto de Minas - Caldas Antioquia</title>
 </head>
 
 
 <body>
     <header>
 
-
+        <h1>Alto de Minas</h1>
 
     </header>
     <main>
