Todo listo - Sin estilos

--- a/prueba1/index.html
+++ b/prueba1/index.html
@@ -16,16 +16,16 @@
         <header>
 
                 <h1> Valle de Aburrá </h1>
-
+                <hr>
             <nav>
-                <hr> <br> <h3> Puntos de interés geográfico </h3> 
-                <!-- EN EL NAV SIEMPRE VA UNA LISTA -->
+                <a href="registro.html"> <button>  Dános tu opinión  </button> </a>
+                <br>
+                <hr> <br> <h3> Puntos de interés geográfico </h3>  
                 <ul>
+                <li> <a href="pagina2.html"> <button> Alto de Minas </button> </a> </li>
+                <br>
                 <li> <a href="pagina1.html"> <button> Municipio de Caldas </button> </a> </li>
                 <br>
-                <li> <a href="pagina2.html"> <button> Alto de Minas </button> </a> </li>
-                <br>
-                <li> <a href="pagina2.html"> <button> Alto de Minas </button> </a> </li>
                 </ul>
                 <br> <br>
                 <hr>
@@ -57,7 +57,7 @@
         </main>
 
         <footer>
-            <h3>
+        <h3>
                 Información del creador
             </h3>
             <p>
@@ -70,7 +70,7 @@
                 Todos los derechos reservados &#169; 2021 
                 <br>
                 Caldas Antioquia - Mes de Marzo
-            </p>
+            </p>    
 
 
 
