--- a/prueba1/pagina2.html
+++ b/prueba1/pagina2.html
@@ -15,15 +15,54 @@
     <header>
 
         <h1>Alto de Minas</h1>
-
+        <hr> <br> <br> 
+        <nav>
+            <a href="index.html"> <button> Presiona aqui para volver al inicio </button> </a>
+            <br> <br> <br>
+            <a href="registro.html"> <button>  Dános tu opinión  </button> </a>
+            <ul>
+                <br> <h3> Puntos de interés geográfico </h3>  
+                <li><a href="pagina1.html"> <button> Municipio de Caldas </button> </a> </li>
+                <br> <br>
+            </ul>
+            <hr>
+        </nav>
     </header>
     <main>
+        <img src="IMG/altominas.jpg" alt="Alto de Minas">
+        <hr>
+        <h2> Alto de Minas </h2>
+        <p>
+
+            Al sur del Valle de Aburrá y dentro de la jurisdicción del municipio de Caldas, 
+            se encuentra un lugar conocido como el Alto de Minas, ubicado a 2380 metros de altura sobre 
+            el nivel del mar. Es un lugar muy concurrido por ciclistas aficionados y profesionales por la 
+            dura ruta que hay que tomar para llegar a el, ya sea desde Medellín o desde La Pintada.
 
 
 
+        </p>
+
+        <br> <hr>
+
+        <video controls="true" > 
+            <source src="video/minas.mp4" type="video/mp4">
+        </video>
+
+        <br> <hr>
     </main>
     <footer>
-
+        <h3>
+            Información del creador
+        </h3>
+        <p>
+            Santiago Vélez.
+          </p>
+        <p>
+            Todos los derechos reservados &#169; 2021 
+            <br>
+            Caldas Antioquia - Mes de Marzo
+        </p>
         
     </footer>
     
