--- a/prueba1/index.html
+++ b/prueba1/index.html
@@ -7,7 +7,7 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="stylesheet" href="CSS/estilo_index.css" type="text/css" media="all">
+       <!-- <link rel="stylesheet" href="CSS/estilo_index.css" type="text/css" media="all"> -->
 
         <title> Blog sobre el Valle de Aburrá </title>
     </head>
