Bases para aplicar estilos

--- a/prueba1/pagina1.html
+++ b/prueba1/pagina1.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Lugares de interés: Municipio de Caldas</title>
-
+    <link rel="stylesheet" href="CSS/estilo_index.css" type="text/css">
 </head>
 
 
@@ -36,9 +36,9 @@
         <img src="IMG/fotocaldas.png" alt="Parque de Caldas">
         <hr>
 
-        <h2>Caldas Antioquia</h2>
+        <h2 class="tituloContenido2">Caldas Antioquia</h2>
 
-        <p> <em>
+        <p class="pContenido2"> <em>
             Caldas es un municipio de Colombia, 
             que está ubicado en el Valle de Aburrá del departamento de 
             Antioquia. Con una altitud media de 1750 metros sobre el nivel del mar
