--- a/prueba1/pagina2.html
+++ b/prueba1/pagina2.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <link rel="stylesheet" href="CSS/estilo_index.css" type="text/css">
     <title>Alto de Minas - Caldas Antioquia</title>
 </head>
 
@@ -28,11 +28,10 @@
             <hr>
         </nav>
     </header>
-    <main>
-        <img src="IMG/altominas.jpg" alt="Alto de Minas">
-        <hr>
-        <h2> Alto de Minas </h2>
-        <p>
+    <main class="cMinas">
+        
+        <h2 class="tituloContenido"> Alto de Minas </h2>
+        <p class="pContenido">
 
             Al sur del Valle de Aburrá y dentro de la jurisdicción del municipio de Caldas, 
             se encuentra un lugar conocido como el Alto de Minas, ubicado a 2380 metros de altura sobre 
