--- a/prueba1/index.html
+++ b/prueba1/index.html
@@ -7,7 +7,7 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-       <!-- <link rel="stylesheet" href="CSS/estilo_index.css" type="text/css" media="all"> -->
+       <link rel="stylesheet" href="CSS/estilo_index.css" type="text/css" media="all">
 
         <title> Blog sobre el Valle de Aburrá </title>
     </head>
@@ -19,16 +19,22 @@
                 <hr>
             <nav>
                 <a href="registro.html"> <button>  Dános tu opinión  </button> </a>
-                <br>
-                <hr> <br> <h3> Puntos de interés geográfico </h3>  
+                <hr> <h3> Puntos de interés geográfico </h3>  
                 <ul>
                 <li> <a href="pagina2.html"> <button> Alto de Minas </button> </a> </li>
                 <br>
                 <li> <a href="pagina1.html"> <button> Municipio de Caldas </button> </a> </li>
-                <br>
+                <br> <br>
+                </ul>
+                <h3> Enlaces Externos </h3>
+                <ul>
+                    <li> <a href="https://www.caldasantioquia.gov.co/" target="_BLANK"> <button> Alcaldía de Caldas </button> </a> </li>
+                    <br>
+                    <li> <a href="https://www.municipio.com.co/los-alrededores-alto-de-minas.html" target="_BLANK"> <button> Información sobre el Alto de Minas </button> </a> </li>
                 </ul>
                 <br> <br>
                 <hr>
+
             </nav>
 
 
@@ -41,9 +47,9 @@
                 <br>
                 <hr>
 
-            <h2> ¿Dónde queda? </h2>
+            <h2 class="tituloContenido"> ¿Dónde queda? </h2>
 
-            <p>
+            <p class="pContenido">
                 El Valle de Aburrá es una subregión ubicada 
                 en el centro-sur del departamento de Antioquia, 
                 Colombia, en medio de la Cordillera Central de los Andes. 
