--- a/prueba1/registro.html
+++ b/prueba1/registro.html
@@ -5,6 +5,10 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title> Dános tu opinión </title>
+        <link rel="stylesheet" href="CSS/estilo_registro.css" type="text/css">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=DotGothic16&display=swap" rel="stylesheet">
+
     </head>
     <body>
 
@@ -28,10 +32,9 @@
         </header>
 
         <main>
-            <center>
-                <h3>Regalanos tu opinión</h3>
+                
                 <form >
-
+                    <h3>Regalanos tu opinión</h3>
                     <input type="text" placeholder="Nombre">
                     <br> <br>
                     <input type="email" placeholder="Correo Electrónico">
@@ -52,8 +55,7 @@
                     <input type="submit">
 
             </form>
-        </center>
-        <hr>
+            <hr>
         </main>
         <footer>
             <h3>
