--- a/prueba1/index.html
+++ b/prueba1/index.html
@@ -62,7 +62,7 @@
 
         </main>
 
-        <footer>
+        <footer class="piedePagina">
         <h3>
                 Información del creador
             </h3>
