--- a/prueba1/pagina1.html
+++ b/prueba1/pagina1.html
@@ -10,6 +10,10 @@
 
     <title>Lugares de interés: Municipio de Caldas</title>
     <link rel="stylesheet" href="CSS/estilo_index.css" type="text/css">
+
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Lora:ital@1&display=swap" rel="stylesheet">
+
 </head>
 
 
@@ -38,14 +42,14 @@
 
         <h2 class="tituloContenido2">Caldas Antioquia</h2>
 
-        <p class="pContenido2"> <em>
+        <p class="pContenido2">
             Caldas es un municipio de Colombia, 
             que está ubicado en el Valle de Aburrá del departamento de 
             Antioquia. Con una altitud media de 1750 metros sobre el nivel del mar
             es uno de los municipios que conforman el Valle de Aburrá y es conocido por ser 
             el municipio donde nace el río Medellín, más concretamente en el Alto de San Miguel
         
-        </em> </p>
+        </p>
         <br> <hr>
  
         <h2>Himno del municipio de Caldas</h2>
@@ -54,7 +58,7 @@
 
 
     </main>
-    <footer>
+    <footer class="piedePagina">
 
         <h3>
             Información del creador
