--- a/prueba1/pagina2.html
+++ b/prueba1/pagina2.html
@@ -8,6 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/estilo_index.css" type="text/css">
     <title>Alto de Minas - Caldas Antioquia</title>
+
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@200&family=Lora:ital@1&display=swap" rel="stylesheet">
 </head>
 
 
@@ -50,7 +53,7 @@
 
         <br> <hr>
     </main>
-    <footer>
+    <footer class="piedePagina">
         <h3>
             Información del creador
         </h3>
