Posicionamiento de footer y funciones adicionales
Se empieza a configurar la pagina de registro, acomodando la barra de navegacion, los campos del formulario y el footer, que despues de una odisea se logró posicionar en la parte de abajo sin que se quitara lo responsivo :v

--- a/taller2/index.html
+++ b/taller2/index.html
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <link rel="stylesheet" href="CSS/estilos.css">
+    <link rel="stylesheet" href="CSS/estilosindex.css">
     <title>Blog - Lugares interesantes</title>
   </head>
   <body>
@@ -31,7 +31,7 @@
                     </ul>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="registro.html">Registro</a>
+                    <a class="nav-link" href="registro.html">Dános tu opinión</a>
                   </li>
                 </ul>
               </div>
@@ -75,7 +75,6 @@
 
             </div>
         </div>
-        <hr>
         <div class="row justify-content-center">
             <h1 class="text-center font-weight-bold  pt-lg-3 pt-sm-5 mb-sm-5 pb-lg-3"> Entradas más recientes </h1>
             <div class="col-lg-4 justify-content-center px-lg-5">
@@ -87,46 +86,37 @@
             <div class="col-lg-4 justify-content-center px-lg-5">
 
                 <h4 class="text-center font-weight-bold pb-lg-1 pb-sm-1"> Corregimiento de Versalles </h4>
-                <a href=""><img src="IMG/versalles.jpg" class="d-block w-100 img-fluid rounded pb-lg-4 pb-sm-4" alt="..."></a>
+                <a href=""><img src="IMG/versalles.jpg" class="d-block w-100 img-fluid rounded pb-lg-4 pb-sm-5" alt="..."></a>
 
             </div>
 
 
         </div>
-        <div class="row justify-content-center mt-lg-5">
-          <div class="col-lg-4 justify-content-center px-lg-5">
-              <h4 class="text-center font-weight-bold pb-lg-1 pb-sm-1"> Municipio de Caldas </h4>
-               <a href=""><img src="IMG/fotocaldas.png" class="d-block w-100 img-fluid rounded pb-lg-4 pb-sm-4 " alt="..."> </a>
 
-
-          </div>
-          <div class="col-lg-4 justify-content-center px-lg-5">
-
-              <h4 class="text-center font-weight-bold  pb-lg-1 pb-sm-1"> Corregimiento de Versalles </h4>
-              <a href=""><img src="IMG/versalles.jpg" class="d-block w-100 img-fluid rounded pb-lg-4 pb-sm-4" alt="..."></a>
-
-          </div>
 
 
       </div>
     </main>
-    <footer class="navbar-bg-morado ">
+    <footer class="navbar-bg-morado align-items-center ">
       <div class="row d-flex justify-content-center">
 
         <div class="col-lg-5">
           <h3 class="text-center font-weight-bold pb-lg-1 pb-sm-1">Información del Autor</h3>
           <p>  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi totam, repellat quod similique incidunt modi culpa debitis asperiores minus quisquam aspernatur eaque eos numquam laudantium fugiat voluptas quo nulla nam quis ducimus optio iusto iste ut? Pariatur, nostrum rem facilis nihil illo eveniet dolorem ea debitis aliquid accusantium amet eaque! </p>
         </div>
+        
+        <div class="col-lg-5 px-lg-5 justify-content-center px-lg-5">
+        <h3 class="text-center font-weight-bold pb-lg-1 pb-sm-1">Redes Sociales</h3>
 
-        <div class="col-lg-5 px-lg-5 justify-content-center">
-
-          <h3 class="text-center font-weight-bold pb-lg-1 pb-sm-1">Redes Sociales</h3>
-
-          <img src="IMG/iconowhats1.png" alt="" class="d-inline-block img-fluid w-100 iconos pl-lg-4">
-          <img src="IMG/iconofacebook1.png" alt="" class="d-inline-block img-fluid w-100 iconos pl-lg-4">
-          <img src="IMG/iconoinstagram2.png" alt="" class="d-inline-block img-fluid w-100 iconos pl-lg-4">
-
-
+          <div class="col-3 justify-content-center d-inline-block ml-lg-5">
+            <a href="https://api.whatsapp.com/send?phone=573194406693"><img src="IMG/iconowhats1.png" alt="" class="d-inline-block img-fluid w-100  iconos ml-lg-5 ml-sm-5"></a>
+          </div>
+          <div class="col-3 justify-content-center d-inline-block">
+            <a href="https://www.facebook.com/santiago.velezsalinas" target="_blank"><img src="IMG/iconofacebook1.png" alt="" class="d-inline-block img-fluid w-100 iconos ml-lg-5 ml-sm-5"></a>
+          </div>
+          <div class="col-3 justify-content-center d-inline-block">
+            <a href="https://www.instagram.com/santivel655/" target="_blank"><img src="IMG/iconoinstagram2.png" alt="" class="d-inline-block img-fluid w-100 iconos ml-lg-5 ml-sm-5"></a>
+          </div>
         </div>
       </div>
 
