--- a/taller2/index.html
+++ b/taller2/index.html
@@ -26,8 +26,8 @@
                       Puntos de interés
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <li><a class="dropdown-item" href="#">Municipio de Caldas</a></li>
-                      <li><a class="dropdown-item" href="#">Corregimiento de Versalles</a></li>
+                      <li><a class="dropdown-item" href="entrada1.html">Municipio de Caldas</a></li>
+                      <li><a class="dropdown-item" href="entrada2.html">Corregimiento de Versalles</a></li>
                     </ul>
                   </li>
                   <li class="nav-item">
@@ -40,9 +40,10 @@
 
     </header>
     <main>
+      <div class="container-fluid">
         <div class="row justify-content-center">
-            <div class="col-lg-5 pt-lg-3 pb-lg-3 pb-sm-3">
-                <h1 class="text-center pb-lg-3 pb-sm-3 pt-sm-3 font-weight-bold"> Bienvenidos al blog </h1>
+            <div class="col-md-6 pt-md-3 pb-md-3 pb-sm-3">
+                <h1 class="text-center pb-md-3 pb-sm-3 pt-sm-3 font-weight-bold"> Bienvenidos al blog </h1>
 
                 <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
                     <div class="carousel-inner">
@@ -75,47 +76,54 @@
 
             </div>
         </div>
-        <div class="row justify-content-center">
-            <h1 class="text-center font-weight-bold  pt-lg-3 pt-sm-5 mb-sm-5 pb-lg-3"> Entradas más recientes </h1>
-            <div class="col-lg-4 justify-content-center px-lg-5">
-                <h4 class="text-center font-weight-bold  pb-lg-1 pb-sm-1"> Municipio de Caldas </h4>
-                 <a href=""><img src="IMG/fotocaldas.png" class="d-block w-100 img-fluid rounded pb-lg-4 pb-sm-4 " alt="..."> </a>
+      </div>
+      <div class="container">
+          <div class="row justify-content-center">
+              <h1 class="text-center font-weight-bold  pt-md-3 pt-sm-5 mb-sm-5 pb-md-3"> Entradas más recientes </h1>
+              <div class="col-md-6 justify-content-center px-md-5">
+                  <h4 class="text-center font-weight-bold  pb-md-1 pb-sm-1"> Municipio de Caldas </h4>
+                  <a href="entrada1.html"><img src="IMG/fotocaldas.png" class="d-block w-100 img-fluid rounded pb-lg-4 pb-sm-4 " alt="..."> </a>
 
 
-            </div>
-            <div class="col-lg-4 justify-content-center px-lg-5">
+              </div>
+              <div class="col-md-6 justify-content-center px-md-5">
 
-                <h4 class="text-center font-weight-bold pb-lg-1 pb-sm-1"> Corregimiento de Versalles </h4>
-                <a href=""><img src="IMG/versalles.jpg" class="d-block w-100 img-fluid rounded pb-lg-4 pb-sm-5" alt="..."></a>
+                  <h4 class="text-center font-weight-bold pb-md-1 pb-sm-1"> Corregimiento de Versalles </h4>
+                  <a href="entrada2.html"><img src="IMG/versalles.jpg" class="d-block w-100 img-fluid rounded pb-lg-4 pb-sm-5" alt="..."></a>
 
-            </div>
+              </div>
 
-
+          </div>
         </div>
-
-
-
       </div>
     </main>
-    <footer class="navbar-bg-morado align-items-center ">
-      <div class="row d-flex justify-content-center">
 
-        <div class="col-lg-5">
-          <h3 class="text-center font-weight-bold pb-lg-1 pb-sm-1">Información del Autor</h3>
-          <p>  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi totam, repellat quod similique incidunt modi culpa debitis asperiores minus quisquam aspernatur eaque eos numquam laudantium fugiat voluptas quo nulla nam quis ducimus optio iusto iste ut? Pariatur, nostrum rem facilis nihil illo eveniet dolorem ea debitis aliquid accusantium amet eaque! </p>
-        </div>
-        
-        <div class="col-lg-5 px-lg-5 justify-content-center px-lg-5">
-        <h3 class="text-center font-weight-bold pb-lg-1 pb-sm-1">Redes Sociales</h3>
 
-          <div class="col-3 justify-content-center d-inline-block ml-lg-5">
-            <a href="https://api.whatsapp.com/send?phone=573194406693"><img src="IMG/iconowhats1.png" alt="" class="d-inline-block img-fluid w-100  iconos ml-lg-5 ml-sm-5"></a>
+
+    <footer>
+      <div class="container-fluid navbar-bg-morado">
+        <div class="row-fluid d-md-flex justify-content-center ">
+
+          <div class="col-md-6 col-xs-12 ">
+            <h3 class="text-center font-weight-bold">Información del Autor</h3>
+            <p class="text-center">Santiago Vélez Salinas</p>
+            <p class="text-center">Caldas Antioquia</p>
+            <p class="text-center">santivekez1012@gmail.com</p>
           </div>
-          <div class="col-3 justify-content-center d-inline-block">
-            <a href="https://www.facebook.com/santiago.velezsalinas" target="_blank"><img src="IMG/iconofacebook1.png" alt="" class="d-inline-block img-fluid w-100 iconos ml-lg-5 ml-sm-5"></a>
-          </div>
-          <div class="col-3 justify-content-center d-inline-block">
-            <a href="https://www.instagram.com/santivel655/" target="_blank"><img src="IMG/iconoinstagram2.png" alt="" class="d-inline-block img-fluid w-100 iconos ml-lg-5 ml-sm-5"></a>
+
+
+          <div class="col-md-6 col-xs-12 justify-content-center ">
+            <h3 class=" text-center font-weight-bold"> Redes Sociales </h3>
+            <div class="align-items-center d-block mt-md-2 mt-1">
+              <a href="https://api.whatsapp.com/send?phone=573194406693" target="_blank"><img src="IMG/iconowhats1.png" alt="" class=" img-fluid w-100 iconos ml-md-5 ml-5"></a>
+
+
+              <a href="https://www.facebook.com/santiago.velezsalinas" target="_blank"><img src="IMG/iconofacebook1.png" alt="" class=" img-fluid w-100 iconos ml-md-5 ml-5"></a>
+
+
+              <a href="https://www.instagram.com/santivel655/" target="_blank"><img src="IMG/iconoinstagram2.png" alt="" class=" img-fluid w-100 iconos ml-md-5 ml-5"></a>
+            </div>
+            
           </div>
         </div>
       </div>
@@ -123,8 +131,6 @@
 
 
     </footer>
-
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 
 
